# TedBot

./: .gitignore  Cargo.toml  README.md  bert_test.py  requirements.txt  start_env.sh
content/: content.txt  new_content.txt
json_content/: content.txt
scrape/: text_scrape.py  text_scrape_json.py
scripts/: bert_test.py
src/: main.rs
