[package]
name = "ted"
version = "0.1.0"
authors = ["Liam Heeger <lheeger@u.rochester.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tantivy = "0.11.3"
serde_json = "1.0"
colored = "1.9"
stopwords = "0.1.0"
rand = "0.3"
